--- a/Labs.Hangfire.Continuations/Labs.Hangfire.Continuations.csproj
+++ b/Labs.Hangfire.Continuations/Labs.Hangfire.Continuations.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -10,6 +10,7 @@
     <PackageReference Include="Hangfire" Version="1.7.28" />
     <PackageReference Include="Hangfire.Dashboard.Dark" Version="2.0.4" />
     <PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
+    <PackageReference Include="Hangfire.Pro" Version="2.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
